--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -14,6 +14,8 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/skins/_all-skins.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/main.css') }}">
 
+    <link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
+
     <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
   </head>
 
@@ -62,10 +64,12 @@
     <script src="{{ asset('theme/plugins/fastclick/fastclick.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/app.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/demo.js') }}"></script>
+    <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
 
     <script src="{{ asset('js/sistemau.functions.js') }}"></script>
     <script src="{{ asset('js/academico.alerts.js') }}"></script>
     <script src="{{ asset('js/mensajes.js') }}"></script>
+    
     <script type="text/javascript" src="{{ asset('js/wizard/jquery.smartWizard.js') }}"></script> <!-- Matriculacion-->
 
 
