--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -25,23 +25,14 @@
     margin: -50px 1px !important;
 }
 
-.flavr-container .flavr-fixer .flavr-outer {
-min-width: 500px !important;
-}
-
-.flavr-form{
-    margin: 20px 0px;
-    text-align: left;
-}
-
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {
-  line-height: 2.0;
-}
-
+.flavr-container .flavr-fixer .flavr-outer {min-width: 500px !important;}
+.flavr-form{margin: 20px 0px;text-align: left;}
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {line-height: 2.0;}
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-icon,
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {
-  text-align: center;
-}
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {text-align: center;}
+.cambioContrasenia{line-height: 1.0;}
+.flavr-container .flavr-fixer {margin: 7% auto 0px !important;}
+
 </style>
 
 <script type="text/javascript">
@@ -80,64 +71,143 @@ function enviar_mail (user) {
  });
 }
 
-function login(){
+function validaContrasenia(idCaja){
+  expr = /(?=^[A-Z].{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
+  
+  band = true;
+
+  stringvalue = $("#"+idCaja).val();
+
+  alert(stringvalue);
+
+  if(stringvalue != ""){
+  
+    if (!expr.test(stringvalue))
+    {
+       mensaje_cisc( "error", "Contraseña invalida.");
+        $("#"+idCaja).val('');
+        band = false;
+    }
+  }
+  return band;
+}
+
+function login(stringvalue){
 
     btn_login = btn_login +1*1;
     if (btn_login == 1) {
 
 
      $('.login-are').removeAttr('click');
-    var html =
-        ' <div class="flavr-message"> Usuario:</div>'+
-        '   <div class="form-row">' +
-        '       <input id="usuario" type="text" name="usuario" ' +
-        '       placeholder="usuario"  required /> <p class="help-block"></p>' +
-        '   </div>' +
-        ' <div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
-        '   <div class="form-row">' +
-        '       <input id="password1" type="password" name="password1" ' +
-        '       placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
-        '   </div>' +
-        ' <div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
-        '   <div class="form-row">' +
-        '       <input id="password2" type="password" name="password2" ' +
-        '       placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
-        '   </div>' +
-        '   <div class="form-row">' +
-        '   </div>';
+
+          var htmlCabecera = 
+          '<div class="cambioContrasenia">' +
+          '<p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br /></p>'+
+          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br /></p>' +
+          '<ul><li>  Letras abecedario Mayúsculas (A-Z).</li>' +
+          '<li>  Letras abecedario minúsculas (a-z).</li>' +
+          '<li>  Números (0-9) o Caracteres especiales ($, %, *, &).</li></ul>' +
+          '<p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p><br/></div>' ;  
+          var html =
+          '<div class="flavr-message"> Usuario:</div>'+
+          '<div class="form-row">' +
+          '<input id="usuario" type="text" name="usuario" ' +
+          'placeholder="Usuario"  required /> <p class="help-block"></p>' +
+          '</div>' +
+          '<div class="flavr-message"> Ingrese Contraseña:</div>'+
+          '<div class="form-row">' +
+          '<input id="password" type="password" name="password" maxlength="8" ' +
+          'placeholder="Contraseña"  required /> <p class="help-block"></p>' +
+          '</div>' +
+          '<div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
+          '<div class="form-row">' +
+          '<input id="password1" type="password" name="password1" maxlength="8"  onchange="return validaContrasenia(this.id)" ' +
+          'placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
+          '</div>' +
+          '<div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
+          '<div class="form-row">' +
+          '<input id="password2" type="password" maxlength="8" name="password2" ' +
+          'placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
+          '</div>' +
+          '<div class="form-row">' +
+          '</div>';
+          
+          html = htmlCabecera + html; 
 
     new $.flavr({
         title       : 'Restablecer Contraseña',
         iconPath    : '{{ asset('images/menu/')}}',
         icon        : 'ug_logo.png',
-        content     : 'Universidad de Guayaquil',
         dialog      : 'form',
         form        : {  content: html, method: 'get'},
         buttons : {
         submit  : { text: 'Iniciar', style: 'danger', addClass: 'submit-btn', id: 'btn_iniciar',
                     action: function( $container, $second, $third ){
-                      if ($("#username").val() == '' || $("#password").val() == '') {
-                          mensaje_cisc( "error", "Ingrese el usuario y el password.");
+                      var bandValid = 0;
+                      var msgError = "";
+
+                      $("#usuario").val($.trim($("#usuario").val()));
+                      $("#password").val($.trim($("#password").val()));
+                      $("#password1").val($.trim($("#password1").val()));
+                      $("#password2").val($.trim($("#password2").val()));
+
+                      if ($("#usuario").val() == '' || $("#password").val() == ''|| $("#password1").val() == ''|| $("#password2").val() == '') {
+                         msgError = "Todos los campos deben estar llenos.";
+                         bandValid = 1;
+                      }else{
+
+                         if($("#password").val() == $("#password1").val())
+                         {
+                             msgError = "Su nueva contraseña debe ser diferente a la actual.";
+                             $("#password1").val('') ;
+                             bandValid = 1;
+                         }else{
+                                if($("#password1").val() != $("#password2").val())
+                                {
+                                 msgError = "Las contraseñas no coinciden.";
+                                 $("#password2").val('') ;
+                                 bandValid = 1;
+                                }
+                         }
+
+                      }
+
+
+
+                      if(bandValid == 1){
+
+                          mensaje_cisc( "error", msgError);
                           this.wobble();
+                          
                       }else{
 
                          $.ajax({
-                             url:   '{{path('titulacion_sis_academico_ingresar')}}',
-                             data: {'user: $("#usuario").val(),pass1': $("#password1").val(),'pass2':$("#password2").val()},
+                             url:   '{{path('admin_academico_ingreso_nuevo_pass')}}',
+                             data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'pass2':$("#password2").val()},
 
                              type:  'post',
+
                              beforeSend: function () {
                                // sitioCargado(notificacionIndex);
                              },
                              error:function(){
                                   btn_login = 0;
+                              
                                   mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
                              },
                              success:  function (dataResponse) {
-                                            mensaje_cisc( "error", "Usuario o constraseña incorrecto/a.");
-                                            // break;
+
+                          
+                               var codigo = JSON.parse(dataResponse).Codigo;
+                               var mensaje = JSON.parse(dataResponse).Mensaje;
 
 
+                              if (codigo == "0") {
+                                mensaje_cisc( "notice", "Contraseña cambiada correctamente");
+                              }
+                              else{
+                                mensaje_cisc( "error", mensaje);
+                              }
                              },
                              dataType:'html'
                           });
@@ -156,7 +226,5 @@ function login(){
     $("#iniciar").hide();
     $("#enviar_mail").hide();
 }
-
-
 
 </script>
