--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -12,10 +12,10 @@
 	    box-shadow: 0 1px 1px rgba(0,0,0,0.1);">
 
 	<div style="padding: 2%;">
-		Usted se ha contactado con soporte para su cuenta de UG. Academico, Por favor proceda al siguiente enlace para que pueda restaurar su contraseña.
+		Usted se ha contactado con soporte para su cuenta de UG. Académico, Por favor proceda al siguiente enlace para que pueda restaurar su contraseña.
 		</br>
 		</br>
-		Si ud. no realizo esta peticion, haga caso omiso al correo y podra continuar con su clave actual.
+		Utilice esta contraseña <b>{{clave}}</b> para que pueda restaurarla.
 	</div>
 
 	<a href="http://localhost{{path('admin_academico_cambio_pass')}}" style="
