--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
@@ -27,6 +27,27 @@
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-6">
+                    <div class="panel panel-yellow">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-file-o fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div><h3>Anulación de Materias</h3></div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="{{path('estudiantes_anulacion')}}">
+                            <div class="panel-footer">
+                                <span class="pull-left">Ir a Anulación de Materias</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-6">
                     <div class="panel panel-green">
                         <div class="panel-heading">
                             <div class="row">
