--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
@@ -9,6 +9,11 @@
                         <i class='fa fa-list' title="Matriculación"></i>
                   </div>
              </a>
+              <a href="{{path('estudiantes_anulacion')}}">
+                  <div class='btn btn-warning btn-circle btn-xl' >
+                        <i class='fa fa-list' title="Anlación"></i>
+                  </div>
+             </a>
              <a  href="{{path('estudiantes_deudas')}}">
                 <div class='btn btn-success btn-circle btn-xl' >
                         <i class='fa fa-money' title="Deudas"></i>
